[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/utils/gamestate.gd" type="Script" id=1]
[ext_resource path="res://assets/hud/heart.png" type="Texture" id=2]
[ext_resource path="res://assets/hud/empty_heart.png" type="Texture" id=3]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="hearts" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="empty_heart_01" type="TextureRect" parent="CanvasLayer/hearts"]
margin_left = 5.0
margin_top = 5.0
margin_right = 23.0
margin_bottom = 23.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="empty_heart_02" type="TextureRect" parent="CanvasLayer/hearts"]
margin_left = 19.0
margin_top = 5.0
margin_right = 37.0
margin_bottom = 23.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="empty_heart_03" type="TextureRect" parent="CanvasLayer/hearts"]
margin_left = 33.0
margin_top = 5.0
margin_right = 51.0
margin_bottom = 23.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="heart_01" type="TextureRect" parent="CanvasLayer/hearts"]
margin_left = 5.0
margin_top = 5.0
margin_right = 23.0
margin_bottom = 23.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="heart_02" type="TextureRect" parent="CanvasLayer/hearts"]
margin_left = 19.0
margin_top = 5.0
margin_right = 37.0
margin_bottom = 23.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="heart_03" type="TextureRect" parent="CanvasLayer/hearts"]
margin_left = 33.0
margin_top = 5.0
margin_right = 51.0
margin_bottom = 23.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 5
